--- a/sample.bib
+++ b/sample.bib
@@ -8,6 +8,17 @@
   organization={ACM}
 }
 
+@article{beck2010challenges,
+  title={Challenges in tailored intervention research},
+  author={Beck, Cornelia and McSweeney, Jean C and Richards, Kathy C and Roberson, Paula K and Tsai, Pao-Feng and Souder, Elaine},
+  journal={Nursing outlook},
+  volume={58},
+  number={2},
+  pages={104--110},
+  year={2010},
+  publisher={Elsevier}
+}
+
 @article{cockburn2014supporting,
   title={Supporting Novice to Expert Transitions in User Interfaces},
   author={Cockburn, Andy and Gutwin, Carl and Scarr, Joey and Malacria, Sylvain},
@@ -41,6 +52,7 @@
   title={Building health behavior models to guide the development of just-in-time adaptive interventions: a pragmatic framework},
   author={Nahum-Shani, Inbal and Hekler, E and Spruijt-Metz, Donna},
   journal={To Appear in Health Psychology},
+  year={2015},
   publisher={APA}
 }
 
