--- a/sample.bib
+++ b/sample.bib
@@ -56,6 +56,17 @@
   publisher={APA}
 }
 
+@article{rivera2013systems,
+  title={Systems modeling of behavior change: two illustrations from optimized interventions for improved health outcomes},
+  author={Rivera, Daniel E and Jimison, Holly B},
+  journal={Pulse, IEEE},
+  volume={4},
+  number={6},
+  pages={41--47},
+  year={2013},
+  publisher={IEEE}
+}
+
 % === MAYBE USED (from ICHI2015) === :
 @article{beim2009inverse,
   title={Inverse problems in dynamic cognitive modeling},
